--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Admin Panel Environment Variables
 
 # API Configuration
-REACT_APP_API_URL=http://localhost:3000/api
+REACT_APP_API_URL=https://backend-5f5u.onrender.com/api
 
 # App Configuration
 REACT_APP_NAME=SafeVault Admin Panel
